--- a/config_sample.env
+++ b/config_sample.env
@@ -1,22 +1,20 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "5821970827:AAHybMe8rAA2RxSN4sNHQh7RZFkYhSM_RSk"                              # Require restart after changing it while bot running
+OWNER_ID = "1803839383"                               # Require restart after changing it while bot running
+TELEGRAM_API = "28949208"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "97ccee8c986ee79e954ab890692156c3"                          # Require restart after changing it while bot running
 # OPTIONAL CONFIG
-GDRIVE_ID = ""
-IS_TEAM_DRIVE = ""
+GDRIVE_ID = "0ALwe_aUrk3msUk9PVA"
+IS_TEAM_DRIVE = "True"
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 STATUS_UPDATE_INTERVAL = "10"
 AUTO_DELETE_MESSAGE_DURATION = "30"
-DATABASE_URL = ""                           # Require restart after changing it while bot running
+DATABASE_URL = "mongodb+srv://sharifbg20:1122@cluster0.vaes6n7.mongodb.net/?retryWrites=true&w=majority"                           # Require restart after changing it while bot running
 AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
 SUDO_USERS = ""                             # Require restart after changing it while bot running
 IGNORE_PENDING_REQUESTS = ""
 USE_SERVICE_ACCOUNTS = ""
-INDEX_URL = ""
+INDEX_URL = "https://driveup.tdworld.workers.dev/0:/"
 STATUS_LIMIT = ""
 STOP_DUPLICATE = ""
 CMD_SUFFIX = ""                              # Require restart after changing it while bot running
